<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardViewStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/titleTaskTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/new_task"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/closeImg"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/titleTaskTxt"
            android:background="@color/black"
            android:id="@+id/viewHLine"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewHLine"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_title"
                android:id="@+id/edTaskTitleL">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="#EAE4E8"
                    android:id="@+id/edTaskTitle"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_description"
                android:id="@+id/edTaskDescL">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:lines="5"
                    android:maxLines="5"
                    android:background="#EAE4E8"
                    android:id="@+id/edTaskDesc"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            
            <Button
                android:id="@+id/saveTaskBtn"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/save_task"
                android:textSize="20sp"
                android:backgroundTint="@color/black"
                style="@style/Widget.App.Button.Fill"/>
        </LinearLayout>


    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>

