<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CardViewStyle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="10dp"
    >

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="false"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@id/editDeleteL"
             android:orientation="vertical">

             <TextView
                 android:id="@+id/titleTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/title"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"/>

             <TextView
                 android:id="@+id/descrTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/description"
                 android:textColor="@color/black"
                 android:layout_marginVertical="4dp"
                 android:textSize="18sp"
                 android:textStyle="bold"/>

             <TextView
                 android:id="@+id/dateTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/date"
                 android:layout_marginVertical="4dp"
                 android:textSize="18sp"
                 />



         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editDeleteL"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:orientation="vertical">
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:id="@+id/editImg"
                 android:layout_marginVertical="4dp"
                 android:src="@drawable/ic_edit"/>

             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:id="@+id/delImg"
                 android:layout_marginVertical="4dp"
                 android:src="@drawable/ic_delete"/>


         </LinearLayout>






     </RelativeLayout>

</com.google.android.material.card.MaterialCardView>